================================================================================

--------------------------------------------------------------------------------
basic

   eventTokens.h
      1) added REFUEL EVENT, work in progress

   AngularVelocity class
      1) Minor update to correct allocating angular objects
         on stack when performing conversions

   Object class
      1) Removed version, magicKey and magicLock member data

   Component class
      1) Minor update to correct allocating String or Integer
         object on stack when setting obj selection

   LatLon class
      1) Added better input error checking
      2) changed 'LCreal' type variables to type 'double'

   LinearVelocity class
      1) Minor update to correct allocating distance objects
         on stack when performing conversions

   List class
      1) Removed the find() member function;
         use the getIndex() member function instead

   SPtr<> template
      1) Added an option flag to constructor

--------------------------------------------------------------------------------
dis

   EmissionPduHandler
      1) started to add slot for beam function.
         as this change will break existing functionality, hold off until a
         compatible change is made

   pdu.h
      1) added Designator PDU

--------------------------------------------------------------------------------
dis simulation


   SynchronizedState class functionality
      1) added/modified these files:
         dis/Nib.h
         dis/NetIO.cpp
         dis/NetIOPlatforms.cpp
         dis/Nib.cpp
         simulation/NetIO.cpp
         simulation/Nib.cpp
         simulation/Player.cpp
      2) SynchronizedState class now used for dead reckoning
      3) NetIO player update correct to "setAngularVelocities" from
         "setGeocAngluarVelocities"
      4) New Lifeform appearance states added
      5) various BaseClass::deleteData() fixed
      6) removed call to clear() from deleteData
